--- a/public/patients/less/misc.less
+++ b/public/patients/less/misc.less
@@ -1018,3 +1018,37 @@ div.q-tabs{
       }
     }
 }
+.input input {
+    width: 100%;
+    border: none;
+    border-bottom: 1px solid #ccc;
+    padding: 10px;
+    font-size: 16px;
+}
+
+
+.input input[data-placeholder] {
+    color: #AAA;
+}
+
+.input input[data-placeholder].active
+{
+    color: black;
+    outline: none;
+}
+.input input:focus
+{
+  outline: none;
+  color: #aaa;
+}
+.parsley-errors-list
+{
+  padding: 0;
+}
+.parsley-errors-list li
+{
+  list-style: none;
+  color: #f00;
+  text-align: left;
+  font-size: 12px;
+}
